--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <meta name="twitter:" content="">
 <meta name="description" content="">
 <meta lang="fr" content="">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 <body>
   <div class="continer">
     <div class="menu-top">
       <span class="name-logo">Portfolio</span>
       <ul class="liste-menu">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="#">Knowledges</a></li>
+        <li><a href="#">Testimonials</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">service</a></li>
+        <li><a href="#">About</a></li>
       </ul>
     </div>
 
