this is section sans button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta lang="fr" content="">
 <link rel="stylesheet" href="css/style.css">
 <body>
+  <!--this is menu page-->
   <div class="continer">
     <div class="menu-top">
       <span class="name-logo">Portfolio</span>
@@ -13,11 +14,23 @@
         <li><a href="#">Knowledges</a></li>
         <li><a href="#">Testimonials</a></li>
         <li><a href="#">Projects</a></li>
-        <li><a href="#">service</a></li>
+        <li><a href="#">Service</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </div>
-
+  </div>
+  <!--this is section-->
+  <div class="continer">
+    <div class="section">
+    <div class="my-name">
+      <h1 class="titlename">sahlaoui mustapha</h1>
+      <p class="para-expl">Experienced Full Stack Developer passionate about bringing ideas to life through code. Skilled in front-end and back-end technologies.</p>
+      <button type="button" name="button">Hire Me</button>
+    </div>
+    <div class="photo">
+      <img  class="photoidie" src="images/info.jpg" alt="my-photo">
+    </div>
+        </div>
 
   </div>
 <script src="js/style.js"></script>
