finish section now we start with new page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="my-name">
       <h1 class="titlename">sahlaoui mustapha</h1>
       <p class="para-expl">Experienced Full Stack Developer passionate about bringing ideas to life through code. Skilled in front-end and back-end technologies.</p>
-      <button type="button" name="button">Hire Me</button>
+      <a href="#index"><button  class="button1" type="button" name="button">Hire Me</button></a>
     </div>
     <div class="photo">
       <img  class="photoidie" src="images/info.jpg" alt="my-photo">
