this is portfoloi sans project

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
 <meta name="description" content="">
 <meta lang="fr" content="">
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 <body>
   <!--this is menu page-->
   <div class="continer">
     <div class="menu-top">
       <span class="name-logo">Portfolio</span>
       <ul class="liste-menu">
-        <li><a href="#">Knowledges</a></li>
+        <li><a href="#">About me</a></li>
         <li><a href="#">Testimonials</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#">Service</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">Knowledges</a></li>
       </ul>
     </div>
   </div>
@@ -25,14 +27,108 @@
     <div class="my-name">
       <h1 class="titlename">sahlaoui mustapha</h1>
       <p class="para-expl">Experienced Full Stack Developer passionate about bringing ideas to life through code. Skilled in front-end and back-end technologies.</p>
-      <a href="#index"><button  class="button1" type="button" name="button">Hire Me</button></a>
+      <a  class="btnnoire" href="#index"><button  class="button1" type="button" name="button">Hire Me</button></a>
     </div>
     <div class="photo">
       <img  class="photoidie" src="images/info.jpg" alt="my-photo">
     </div>
-        </div>
+  </div>
+</div>
+    <div class="ligne">
+      <div class="continer">
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href="#"><i class="fa-brands fa-blogger"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+    </div>
+<!---this is section about me explain in this code-->
+    <div class="continer">
+      <div class="section2">
+      <div class="my-name2">
+        <img  class="anouimag" src="images/1.jpg" alt="anouymous">
+      </div>
+      <div class="div2">
+        <h1 class="titlename2">About me</h1>
+        <h1 class="titlename2">More Than 3+ Years Programming Experienced</h1>
+        <p class="para-expl2">I am Sahlaoui Mustapha Full Stack Developper I am an award-winning full-stack web developer and UI/UX javascript specialist. Check out my articles, React and React Native components at the code laboratory. Feel free to take a look at my latest projects on the web portfolio page. </p>
+        <h5 class="para-expl2">Name : Sahlaoui Mustapha<br>
+            Email : anonanonsahlaoui@gmail.com <br>
+            Location : Maroc , nador terkaa <br>
+            Office : Nador <br></h5>
+        <a  class="btnnoire2" href="#index"><button  class="button1" type="button" name="button">Dowload CV</button></a>
+      </div>
+      </div>
+    </div>
+    <!--this is bar menu for menu bar cycle-->
+  <div class="continer">
+    <div class="section3">
+      <div class="myname3">
+        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+
+      </div>
+    </div>
+  </div>
+  <div class="continer">
+    <h1 class="know">Knowledges</h1>
+    <div class="section4">
+      <div class="myname4">
+        <div class="skill-main">
+            <div class="skill-wrrap">
+              <div class="skill-name">HTML</div>
+              <div class="skill-bar">
+                <div class="skill-per" per="90"></div>
+              </div>
+            </div>
+
+            <div class="skill-wrrap">
+              <div class="skill-name">CSS</div>
+              <div class="skill-bar">
+                <div class="skill-per" per="70"></div>
+              </div>
+            </div>
+
+            <div class="skill-wrrap">
+              <div class="skill-name">Javascript</div>
+              <div class="skill-bar">
+                <div class="skill-per" per="60"></div>
+              </div>
+              <div class="skill-wrrap">
+                <div class="skill-name">React</div>
+                <div class="skill-bar">
+                  <div class="skill-per" per="30"></div>
+                </div>
+                <div class="skill-wrrap">
+                  <div class="skill-name">Vue.js</div>
+                  <div class="skill-bar">
+                    <div class="skill-per" per="40"></div>
+                  </div>
+                  <div class="skill-wrrap">
+                    <div class="skill-name">mysql</div>
+                    <div class="skill-bar">
+                      <div class="skill-per" per="60"></div>
+                    </div>
+
+            </div>
+          </div>
+
+      </div>
+      </div>
+    </div>
+
+
 
   </div>
+</div>
+<div class="continer">
+  <div class="section3">
+    <div class="myname3">
+      <h1 class="H1TITLE">Project</h1>
+
+    </div>
+  </div>
+</div>
 <script src="js/style.js"></script>
 </body>
 </html>
